# ModelBenchmarkTesting

./: .gitignore  README.md  pyproject.toml
configs/: eval.json  models.json
docs/: human_review_form.md  task_schema.md  web_console.md
evaluator/: cli.py  patching.py  prompting.py  runner.py  sandbox.py  task_loader.py  web_app.py
evaluator/model_clients/: base.py  factory.py  local_http.py  mock.py  openai_compatible.py
evaluator/reporting/: csv_report.py  json_report.py
evaluator/scoring/: constraints.py  cost.py  human_review.py  latency.py  tests.py
results/web_runs/web_0e567e373aca/: job.json
results/web_runs/web_2c047667c01f/: job.json  runs.json
results/web_runs/web_34f4d3dbf017/: job.json  summary.json
results/web_runs/web_50aa51e54aaf/: job.json  runs.json
results/web_runs/web_69e204047e6a/: job.json  runs.json  summary.json
results/web_runs/web_8b7d62f6e178/: job.json  runs.json  summary.json
results/web_runs/web_8eacb04adf3f/: job.json  runs.json  summary.json
results/web_runs/web_9459648bd5f7/: job.json  runs.json  summary.json
results/web_runs/web_a96f4c193cc4/: job.json  runs.json
results/web_runs/web_dace47e1811f/: job.json  runs.json  summary.json
results/web_runs/web_direct_e42e5d/: job.json  runs.json  summary.json
scripts/: check_ratio.py
tasks/java/java-coupon-bugfix/: task.json
tasks/java/java-date-time-bug/: task.json
tasks/java/java-exception-mapping/: task.json
tasks/java/java-gradle-wrapper-build/: task.json
tasks/java/java-invoice-junit-tests/: task.json
tasks/java/java-kafka-retry-policy/: task.json
(+70 files in other folders)
